[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
games = { path = "../games"}
axum = {version = "0.7.4"}
color-eyre = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
tower = "0.4.13"
